infra/knodes-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: knodes-app
  namespace: knodes-app
spec:
  selector:
    app: knodes-app
  ports:
    - port: 80
      targetPort: 80
